--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,18 @@
   src: url('/static/fonts/HorsebackSlab-Bold.ttf')  format('truetype');
   }
 
+  @font-face {
+    font-family: 'digital-7';
+    src: url('/static/fonts/digital-7 (mono).ttf');
+    src: url('/static/fonts/digital-7 (mono).ttf')  format('truetype');
+    }
+
+    @font-face {
+      font-family: 'museo-slab';
+      src: url('/static/fonts/MuseoSlab-300.otf');
+      src: url('/static/fonts/MuseoSlab-300.otf')  format('truetype');
+      }
+
   horseText {
     font-family: 'HorsebackSlab', Fallback, serif;
   }
